--- a/Index.html
+++ b/Index.html
@@ -9,6 +9,7 @@
 <body>
 
   <div  class="container">
+
 	<header>
 		<a class="display-inline-block" href="#"> 
 			<img class="logo" src="Img/Logo.svg" alt="logo">
@@ -26,6 +27,15 @@
 				</li>
 			</ul>
   	</header>
+  
+
+  <div class="calendar display-inline-block">
+  	<h1 class="tarigi"> 27 </h1>
+  	<p class="maisi"> მაისი </p>
+  </div>
+
+  <div class="toptext">
+  	<h1 class="satauri"> ლორემ იპსუმ ჩაუმალა დასრესა ორპირო ულბობდა რომანსი გაგაკოტრებ </h1>
   </div>
 
   <section class="text-wrapper">
@@ -38,7 +48,16 @@
   	</div>  	
   </section>
 
-<section class="text-wrapper2">
+  <div class="calendar display-inline-block">
+  	<h1 class="tarigi"> 27 </h1>
+  	<p class="maisi"> მაისი </p>
+  </div>
+
+  <div class="toptext">
+  	<h1 class="satauri"> ლორემ იპსუმ ჩაუმალა დასრესა ორპირო ულბობდა რომანსი გაგაკოტრებ </h1>
+  </div>
+
+  <section class="text-wrapper">
   	<div class="wrapper">
   		<img class="image" src="img/typewriter.svg">
   		<div class="text display-inline-block"> 
@@ -48,7 +67,16 @@
   	</div>  	
   </section>
 
-  <section class="text-wrapper3">
+  <div class="calendar display-inline-block">
+  	<h1 class="tarigi"> 27 </h1>
+  	<p class="maisi"> მაისი </p>
+  </div>
+
+  <div class="toptext">
+  	<h1 class="satauri"> ლორემ იპსუმ ჩაუმალა დასრესა ორპირო ულბობდა რომანსი გაგაკოტრებ </h1>
+  </div>
+
+  <section class="text-wrapper">
   	<div class="wrapper">
   		<img class="image" src="img/typo.svg">
   		<div class="text display-inline-block"> 
@@ -59,7 +87,7 @@
   </section>
 
 
-   <footer>
+   <footer class="footer">
    	<ul>
    		<li class="display-inline-block">
    			<a href="https://www.facebook.com/">
@@ -77,7 +105,8 @@
    	</ul>
   			
    </footer>
-  
+
+  </div>
 </body>
 
 
