--- a/Index.html
+++ b/Index.html
@@ -90,7 +90,7 @@
    <footer class="footer">
    	<ul>
    		<li class="display-inline-block">
-   			<a href="https://www.facebook.com/">
+   			<a href="https://www.facebook.com/" target="blank">
    				<img class="fb" src="img/fb.svg">
    			</a>
    		</li>
@@ -98,7 +98,7 @@
    		<li class="divider display-inline-block"></li>
 
    		<li class="display-inline-block">
-   			<a href="https://www.youtube.com/">
+   			<a href="https://www.youtube.com/" target="blank">
    				<img class="yt" src="img/yt.svg">
    			</a>
    		</li>
