--- a/Index.html
+++ b/Index.html
@@ -2,8 +2,9 @@
 <html>
 <head>
 	<title>პირველი გვერდი</title>
-	<link rel="stylesheet" type="text/css" href="Reset.css">
-	<link rel="stylesheet" type="text/css" href="Style1.css">
+	<link rel="stylesheet" type="text/css" href="css/Reset.css">
+	<link rel="stylesheet" type="text/css" href="css/fonts.css">
+	<link rel="stylesheet" type="text/css" href="css/Style1.css">
 </head>
 
 <body>
