--- a/Index.html
+++ b/Index.html
@@ -21,10 +21,10 @@
 					<a class="navigatian-a active" href="#">მთავარი</a>
 				</li>
 				<li class="display-inline-block">
-					<a class="navigatian-a" href="#">სიახლეები</a>
+					<a class="navigatian-a" href="index2.html">სიახლეები</a>
 				</li>
 				<li class="display-inline-block">
-					<a class="navigatian-a" href="#">კონტაქტი</a>
+					<a class="navigatian-a" href="index3.html">კონტაქტი</a>
 				</li>
 			</ul>
   	</header>
