--- a/Index2.html
+++ b/Index2.html
@@ -17,10 +17,10 @@
     <nav class="navigation display-inline-block">
       <ul>
         <li class="display-inline-block">
-          <a class="navigatian-a active" href="#">მთავარი</a>
+          <a class="navigatian-a " href="#">მთავარი</a>
         </li>
         <li class="display-inline-block">
-          <a class="navigatian-a" href="#">სიახლეები</a>
+          <a class="navigatian-a active" href="#">სიახლეები</a>
         </li>
         <li class="display-inline-block">
           <a class="navigatian-a" href="#">კონტაქტი</a>
@@ -46,17 +46,13 @@
     <div class="leftbanner display-inline-block">
       <h1 class="topicleft">RESPONSIVE WEB DESIGN</h1>
       <img  class="pointer" src="img/pointer.svg">
-      <p class="textleft display-inline-block">approach that suggests that design and development should respond to the user's behavior and environment based on screen size, platform and orientation.</p>
-      
+      <p class="textleft display-inline-block">approach that suggests that design and development should respond to the user's behavior and environment based on screen size, platform and orientation.</p>      
     </div>
-  </section>
-
-  <section>
+  
     <div class="rightbanner display-inline-block">
       <h1 class="topicright">APP DEVELOPMET</h1>
       <img  class="mob" src="img/mobile.svg">
-      <p class="textright display-inline-block">Mobile application development is the process of making or creating a mobile application to run on various mobile platforms. A mobile platform is a mobile operating system.</p>
-      
+      <p class="textright display-inline-block">Mobile application development is the process of making or creating a mobile application to run on various mobile platforms. A mobile platform is a mobile operating system.</p>      
     </div>
   </section>
 
