--- a/Index3.html
+++ b/Index3.html
@@ -4,11 +4,11 @@
 	<title>მეორე გვერდი</title>
 	<link rel="stylesheet" type="text/css" href="css/Reset.css">
 	<link rel="stylesheet" type="text/css" href="css/fonts.css">
-	<link rel="stylesheet" type="text/css" href="css/Style2.css">
+	<link rel="stylesheet" type="text/css" href="css/Style3.css">
 </head>
 
 <body>
-  <div  class="container">
+    <div  class="container">
 
   <header>
     <a class="display-inline-block" href="#"> 
@@ -29,8 +29,19 @@
     </header>
 
   <section>
-    <div class="mapbg">
-      <img class="map" src="img/map.svg">
+    <div class="bg">
+        <div class="text display-inline-block">
+          <p class="text1"> საკონტაქტო ინფორმაცია:</p>
+          <p class="text2"> მისამართი: პეტრიაშვილის ქ. 30</p>
+          <p class="text3"> ტელ.: +995 32 222 222</p>
+          <p class="text4"> ელ. ფოსტა: mail@gmail.com</p>
+        </div>
+
+
+        <div class="maps">
+          <img class="map" src="img/map.svg">
+        </div>
+    </div>
   </section>
 
    <footer class="footer">
